test/error/error.input60.zc
Variable is not a struct type:x on line 3
